force-app/main/default/objects/Chargeover_URL__c/Chargeover_URL__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Chargeover URL</label>
</CustomObject>