force-app/main/default/objects/Chargeover_URL__c/fields/Chargeover_Pass__c.field-meta.xml
<CustomField>
    <fullName>Chargeover_Pass__c</fullName>
    <label>Chargeover Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>