force-app/main/default/objects/Chargeover_URL__c/fields/Chargeover_URL__c.field-meta.xml
<CustomField>
    <fullName>Chargeover_URL__c</fullName>
    <label>Chargeover URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>