force-app/main/default/objects/Chargeover_URL__c/fields/Chargeover_User__c.field-meta.xml
<CustomField>
    <fullName>Chargeover_User__c</fullName>
    <label>Chargeover User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>