force-app/main/default/objects/Chargeover_URL__c/fields/Scheduler_URL__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_URL__c</fullName>
    <label>Scheduler URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>